--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,11 @@
           </plugin>
 		</plugins>
 	</build>
-
+<!--	<distributionManagement>-->
+<!--		<repository>-->
+<!--			<id>deploymentRepo</id>-->
+<!--			<name>Nexus Repository</name>-->
+<!--			<url>http://193.95.57.13:8081/repository/maven-releases/</url>-->
+<!--		</repository>-->
+<!--	</distributionManagement>-->
 </project>
